    o #522318 by dereine: Provide a "human readable" name for all Views.
    o #1003112 by ralf: Add configure line to views_ui.info
    o #118672: Allow an OR in filters by adding groups in the filter UI.
    o by dereine: Add a test for field math, and fix the field math :)
    o #1007036 by bojanz: Fix Node: Has new content filter.
    o by dereine: Add a test for filter equality.
    o by dereine: Add a test for field counter.
    o #1007036 by dereine: Fix join condition for Node: Has new content filter.
    o by dereine: Fix tests for detecting module template files.
    o #1007730 by bojanz, merlinofchaos, dereine: Fix views_handler_filter_string, add tests and add a general placeholder method.
    o #1006644 by bojanz, dereine: Allow field field handler to work with users.
    o #759082 by dereine: Fix whitescreen due to incorrect relationship loop code.
    o by dereine: Remove old comment about select::countQuery.
    o #863478 by damz, dereine: Allow basic distinct support.
    o #667950 by bec : Remove workaround for filter_numeric dependency.
    o #1011266 by sime: Fix whitescreen due to changes in #759082.
    o #1011220 by aspilicious: Auto-Generate View's Machine-Readable Name.
    o #1001542 by mikeytown2: view::set_display() has wrong return code when it fails.
    o #1011220 follow-up: Add missing point on machine_name.
    o #722330 by dereine: Views should include core version for updates.
    o #1008706 by dereine: Convert placeholders to new api.
    o #807616 by damz, dereine: Remove views_handler_sort_formula and add a short entry in api-upgrading.html
    o #873238 follow up by dereine: Remove adding cookie.js all the time. Ajax loading works now.
    o #591302 by yhahn: Update ajax_view.js for ajax framework.
    o #972638 by bojanz: Mini pager hasn't been ported.
    o #1011334 by dereine: Exposed filters without input broke sql.
    o #990088 by yhahn: Fix taxonomy integration by changing vid to nid for taxonomy_index.