@@ -598,3 +598,4 @@ Views 3.x-7.x-dev
     o #972638 by bojanz: Mini pager hasn't been ported.
     o #1011334 by dereine: Exposed filters without input broke sql.
     o #990088 by yhahn: Fix taxonomy integration by changing vid to nid for taxonomy_index.
+    o #1007466 by aspilicious, dereine: Provide a api function for adding complex queries: add_where_expression, add_having_condition.
